--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,15 +7,15 @@ html {
   font-family: 'Montserrat', sans-serif;
 }
 
-.bg-bragi-logo {
-  background-image: url('../public/bg.png');
+.bg-bragi-roxo {
+  background-image: url('../public/bg-roxo.png');
 }
 
 .bg-preto {
   background-image: url('../public/bg-preto.png');
 }
 
-.shadow {
+* {
   color: #fff;
   text-shadow: 3px 5px #00000033;
 }
