--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ html {
   background-image: url('../public/bg-preto.png');
 }
 
-* {
+.main {
   color: #fff;
-  text-shadow: 3px 5px #00000033;
+  text-shadow: 3px 3px #00000033;
 }
